# liboqs-hxw-batch

./: CMakeLists.txt  hxw.sh
.CMake/: alg_support.cmake
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  rules.ninja
_build/include/oqs/: kem_fptru.h  oqsconfig.h
_build/src/: cmake_install.cmake  liboqs.pc  liboqsConfigVersion.cmake
_build/src/cmake/: liboqsTargets.cmake
_build/src/common/: cmake_install.cmake
_build/src/common/sha3/xkcp_low/: cmake_install.cmake
_build/src/kem/bike/: cmake_install.cmake
_build/src/kem/classic_mceliece/: cmake_install.cmake
_build/src/kem/fptru/: cmake_install.cmake
_build/src/kem/frodokem/: cmake_install.cmake
_build/src/kem/hqc/: cmake_install.cmake
_build/src/kem/kyber/: cmake_install.cmake
_build/src/kem/ntruprime/: cmake_install.cmake
_build/src/sig/dilithium/: cmake_install.cmake
_build/src/sig/falcon/: cmake_install.cmake
_build/src/sig/sphincs/: cmake_install.cmake
_build/tests/: cmake_install.cmake  dump_alg_info  example_kem  example_sig  kat_kem  kat_sig  speed_common  speed_kem  speed_sig  test_aes  test_hash  test_kem  test_kem_mem  test_sha3  test_sig  test_sig_mem
docs/algorithms/kem/: ctruprime.yml  fptru.yml
src/: CMakeLists.txt  oqsconfig.h.cmake
src/kem/: kem.c  kem.h
src/kem/ctruprime/: CMakeLists.txt  kem_ctruprime.h  kem_ctruprime_653.c
src/kem/ctruprime/ctruprime653/: Makefile  kem.c  poly.h  symmetric_crypto.h
src/kem/ctruprime/ctruprime653/poly_mul_n1277q/: radix_ntt_n1277.h
src/kem/ctruprime/ctruprime653/poly_mul_n653q/: radix_ntt_n653.c
src/kem/fptru/: CMakeLists.txt  CMakeListshxw.txt  kem_fptru_1277.c  kem_fptru_653.c  kem_fptru_761.c
src/kem/fptru/fptru_1277/: cbd.h  params.h
src/kem/fptru/fptru_1277_batch/: Makefile  README.md  cbd.c  cbd.h  pke.c  test_speed.c  test_speed761
src/kem/fptru/fptru_653/: Makefile  cbd.c  pke.h
src/kem/fptru/fptru_653/poly_mul_n653q/: radix_ntt_n653.h
src/kem/fptru/fptru_653_batch/: batchkeygen.c  batchkeygen_extern.h  reduce.c
src/kem/fptru/fptru_761/: coding.c  inverse.h  inverse761.c  kem.c  pack761.c  pke.c  poly761.c  test_kem761.c  test_speed761.c
src/kem/fptru/fptru_761_batch/: batchkeygen_extern.c  coding.h  reduce.h  test_kem761
src/kem/fptru/fptru_761_batch/poly_mul_n761q/: radix_ntt_n761.c  radix_ntt_n761.h
src/kem/fptru/fptru_main/: cbd.h  coding.h  cpucycles.h  fips202.h  inverse.h  kem.h  pack.h  params.h  pke.h  poly.h  randombytes.h  reduce.h  speed.h  symmetric_crypto.h
src/kem/fptru/fptru_main/poly_mul_n1277q/: radix_ntt_n1277.c
src/kem/kyber/: kem_kyber_512.c
src/kem/kyber/pqcrystals-kyber_kyber512_ref/: api.h
src/kem/ntruprime/: CMakeLists.txt  kem_ntruprime_sntrup761.c
